# prelims-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
prelims_cli/: __init__.py  cli.py  processor.py
prelims_cli/config/: config.yaml
prelims_cli/config/handlers/processors/: en.yaml
prelims_cli/embedding/: __init__.py  cache.py  inference.py  recommender.py
prelims_cli/ext/: embedding_recommender.py
prelims_cli/ja/: tokenizer.py
tests/: test_embedding_cache.py  test_embedding_recommender.py  test_integration_embedding.py  test_onnx_embedder.py  test_prelims_cli.py
