[project]
name = "prelims-cli"
version = "0.0.4"
description = "prelims CLI - Front matter post-processor CLI"
authors = [{ name = "Aki Ariga", email = "chezou@gmail.com" }]
maintainers = [{ name = "Aki Ariga", email = "chezou@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.22.1",
  "scipy>=1.7.3",
  "prelims>=0.0.6",
  "click>=8.0.3",
  "omegaconf>=2.1.1",
]

[project.optional-dependencies]
ja = ["SudachiPy>=0.6.2", "SudachiDict-full>=20211220"]

[project.scripts]
prelims-cli = "prelims_cli.cli:main"

[project.urls]
Homepage = "https://github.com/chezou/prelims-cli"
Repository = "https://github.com/chezou/prelims-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=6.0",
  "mypy>=0.931",
  "ruff>=0.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
