[project]
name = "prelims-cli"
dynamic = ["version"]
description = "prelims CLI - Front matter post-processor CLI"
authors = [{ name = "Aki Ariga", email = "chezou@gmail.com" }]
maintainers = [{ name = "Aki Ariga", email = "chezou@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "prelims>=0.0.6",
  "click>=8.0.3",
  "omegaconf>=2.1.1",
]

[project.optional-dependencies]
ja = ["SudachiPy>=0.6.2", "SudachiDict-full>=20211220"]
embedding = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.21.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
]

[project.scripts]
prelims-cli = "prelims_cli.cli:main"

[project.urls]
Homepage = "https://github.com/chezou/prelims-cli"
Repository = "https://github.com/chezou/prelims-cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
  "pytest>=6.0",
  "mypy>=0.931",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests that require model download (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
